parser.output
Grammar

    0 $accept: program $end

    1 program: stmt_list
    2        | stmt_list error

    3 stmt_list: /* empty */
    4          | stmt_list stmt

    5 stmt: decl_stmt TOK_TILDE
    6     | assign_stmt TOK_TILDE
    7     | shw_stmt TOK_TILDE
    8     | expr_stmt TOK_TILDE
    9     | TOK_TILDE
   10     | error TOK_TILDE

   11 decl_stmt: TOK_NMBR init_list
   12          | TOK_CHR init_list
   13          | TOK_FLEX init_list

   14 init_list: init
   15          | init_list TOK_COMMA init

   16 init: TOK_IDENT
   17     | TOK_IDENT TOK_ASSIGN expression

   18 assign_stmt: TOK_IDENT TOK_ASSIGN expression
   19            | TOK_IDENT TOK_PLUS_ASSIGN expression
   20            | TOK_IDENT TOK_MINUS_ASSIGN expression
   21            | TOK_IDENT TOK_MULT_ASSIGN expression
   22            | TOK_IDENT TOK_DIV_ASSIGN expression

   23 shw_stmt: TOK_SHW TOK_LPAREN arg_list_opt TOK_RPAREN

   24 arg_list_opt: /* empty */
   25             | arg_list

   26 arg_list: expression
   27         | arg_list TOK_COMMA expression

   28 expr_stmt: expression

   29 expression: additive_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression TOK_PLUS multiplicative_expression
   32                    | additive_expression TOK_MINUS multiplicative_expression

   33 multiplicative_expression: unary_expression
   34                          | multiplicative_expression TOK_MULT unary_expression
   35                          | multiplicative_expression TOK_DIV unary_expression

   36 unary_expression: primary_expression
   37                 | TOK_PLUS unary_expression
   38                 | TOK_MINUS unary_expression

   39 primary_expression: TOK_NUMBER_LITERAL
   40                   | TOK_CHAR_LITERAL
   41                   | TOK_STRING_LITERAL
   42                   | TOK_IDENT
   43                   | TOK_LPAREN expression TOK_RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 2 10
TOK_TILDE (258) 5 6 7 8 9 10
TOK_COMMA (259) 15 27
TOK_LPAREN (260) 23 43
TOK_RPAREN (261) 23 43
TOK_PLUS (262) 31 37
TOK_MINUS (263) 32 38
TOK_MULT (264) 34
TOK_DIV (265) 35
TOK_ASSIGN (266) 17 18
TOK_PLUS_ASSIGN (267) 19
TOK_MINUS_ASSIGN (268) 20
TOK_MULT_ASSIGN (269) 21
TOK_DIV_ASSIGN (270) 22
TOK_SHW (271) 23
TOK_NMBR (272) 11
TOK_CHR (273) 12
TOK_FLEX (274) 13
TOK_IDENT (275) 16 17 18 19 20 21 22 42
TOK_NUMBER_LITERAL (276) 39
TOK_CHAR_LITERAL (277) 40
TOK_STRING_LITERAL (278) 41


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
program (25)
    on left: 1 2, on right: 0
stmt_list (26)
    on left: 3 4, on right: 1 2 4
stmt (27)
    on left: 5 6 7 8 9 10, on right: 4
decl_stmt (28)
    on left: 11 12 13, on right: 5
init_list (29)
    on left: 14 15, on right: 11 12 13 15
init (30)
    on left: 16 17, on right: 14 15
assign_stmt (31)
    on left: 18 19 20 21 22, on right: 6
shw_stmt (32)
    on left: 23, on right: 7
arg_list_opt (33)
    on left: 24 25, on right: 23
arg_list (34)
    on left: 26 27, on right: 25 27
expr_stmt (35)
    on left: 28, on right: 8
expression (36)
    on left: 29, on right: 17 18 19 20 21 22 26 27 28 43
additive_expression (37)
    on left: 30 31 32, on right: 29 31 32
multiplicative_expression (38)
    on left: 33 34 35, on right: 30 31 32 34 35
unary_expression (39)
    on left: 36 37 38, on right: 33 34 35 37 38
primary_expression (40)
    on left: 39 40 41 42 43, on right: 36


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list .
    2        | stmt_list . error
    4 stmt_list: stmt_list . stmt

    error               shift, and go to state 4
    TOK_TILDE           shift, and go to state 5
    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_SHW             shift, and go to state 9
    TOK_NMBR            shift, and go to state 10
    TOK_CHR             shift, and go to state 11
    TOK_FLEX            shift, and go to state 12
    TOK_IDENT           shift, and go to state 13
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    $end  reduce using rule 1 (program)

    stmt                       go to state 17
    decl_stmt                  go to state 18
    assign_stmt                go to state 19
    shw_stmt                   go to state 20
    expr_stmt                  go to state 21
    expression                 go to state 22
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 3

    0 $accept: program $end .

    $default  accept


State 4

    2 program: stmt_list error .
   10 stmt: error . TOK_TILDE

    TOK_TILDE  shift, and go to state 27

    $default  reduce using rule 2 (program)


State 5

    9 stmt: TOK_TILDE .

    $default  reduce using rule 9 (stmt)


State 6

   43 primary_expression: TOK_LPAREN . expression TOK_RPAREN

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 29
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 7

   37 unary_expression: TOK_PLUS . unary_expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    unary_expression    go to state 30
    primary_expression  go to state 26


State 8

   38 unary_expression: TOK_MINUS . unary_expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    unary_expression    go to state 31
    primary_expression  go to state 26


State 9

   23 shw_stmt: TOK_SHW . TOK_LPAREN arg_list_opt TOK_RPAREN

    TOK_LPAREN  shift, and go to state 32


State 10

   11 decl_stmt: TOK_NMBR . init_list

    TOK_IDENT  shift, and go to state 33

    init_list  go to state 34
    init       go to state 35


State 11

   12 decl_stmt: TOK_CHR . init_list

    TOK_IDENT  shift, and go to state 33

    init_list  go to state 36
    init       go to state 35


State 12

   13 decl_stmt: TOK_FLEX . init_list

    TOK_IDENT  shift, and go to state 33

    init_list  go to state 37
    init       go to state 35


State 13

   18 assign_stmt: TOK_IDENT . TOK_ASSIGN expression
   19            | TOK_IDENT . TOK_PLUS_ASSIGN expression
   20            | TOK_IDENT . TOK_MINUS_ASSIGN expression
   21            | TOK_IDENT . TOK_MULT_ASSIGN expression
   22            | TOK_IDENT . TOK_DIV_ASSIGN expression
   42 primary_expression: TOK_IDENT .

    TOK_ASSIGN        shift, and go to state 38
    TOK_PLUS_ASSIGN   shift, and go to state 39
    TOK_MINUS_ASSIGN  shift, and go to state 40
    TOK_MULT_ASSIGN   shift, and go to state 41
    TOK_DIV_ASSIGN    shift, and go to state 42

    $default  reduce using rule 42 (primary_expression)


State 14

   39 primary_expression: TOK_NUMBER_LITERAL .

    $default  reduce using rule 39 (primary_expression)


State 15

   40 primary_expression: TOK_CHAR_LITERAL .

    $default  reduce using rule 40 (primary_expression)


State 16

   41 primary_expression: TOK_STRING_LITERAL .

    $default  reduce using rule 41 (primary_expression)


State 17

    4 stmt_list: stmt_list stmt .

    $default  reduce using rule 4 (stmt_list)


State 18

    5 stmt: decl_stmt . TOK_TILDE

    TOK_TILDE  shift, and go to state 43


State 19

    6 stmt: assign_stmt . TOK_TILDE

    TOK_TILDE  shift, and go to state 44


State 20

    7 stmt: shw_stmt . TOK_TILDE

    TOK_TILDE  shift, and go to state 45


State 21

    8 stmt: expr_stmt . TOK_TILDE

    TOK_TILDE  shift, and go to state 46


State 22

   28 expr_stmt: expression .

    $default  reduce using rule 28 (expr_stmt)


State 23

   29 expression: additive_expression .
   31 additive_expression: additive_expression . TOK_PLUS multiplicative_expression
   32                    | additive_expression . TOK_MINUS multiplicative_expression

    TOK_PLUS   shift, and go to state 47
    TOK_MINUS  shift, and go to state 48

    $default  reduce using rule 29 (expression)


State 24

   30 additive_expression: multiplicative_expression .
   34 multiplicative_expression: multiplicative_expression . TOK_MULT unary_expression
   35                          | multiplicative_expression . TOK_DIV unary_expression

    TOK_MULT  shift, and go to state 49
    TOK_DIV   shift, and go to state 50

    $default  reduce using rule 30 (additive_expression)


State 25

   33 multiplicative_expression: unary_expression .

    $default  reduce using rule 33 (multiplicative_expression)


State 26

   36 unary_expression: primary_expression .

    $default  reduce using rule 36 (unary_expression)


State 27

   10 stmt: error TOK_TILDE .

    $default  reduce using rule 10 (stmt)


State 28

   42 primary_expression: TOK_IDENT .

    $default  reduce using rule 42 (primary_expression)


State 29

   43 primary_expression: TOK_LPAREN expression . TOK_RPAREN

    TOK_RPAREN  shift, and go to state 51


State 30

   37 unary_expression: TOK_PLUS unary_expression .

    $default  reduce using rule 37 (unary_expression)


State 31

   38 unary_expression: TOK_MINUS unary_expression .

    $default  reduce using rule 38 (unary_expression)


State 32

   23 shw_stmt: TOK_SHW TOK_LPAREN . arg_list_opt TOK_RPAREN

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    $default  reduce using rule 24 (arg_list_opt)

    arg_list_opt               go to state 52
    arg_list                   go to state 53
    expression                 go to state 54
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 33

   16 init: TOK_IDENT .
   17     | TOK_IDENT . TOK_ASSIGN expression

    TOK_ASSIGN  shift, and go to state 55

    $default  reduce using rule 16 (init)


State 34

   11 decl_stmt: TOK_NMBR init_list .
   15 init_list: init_list . TOK_COMMA init

    TOK_COMMA  shift, and go to state 56

    $default  reduce using rule 11 (decl_stmt)


State 35

   14 init_list: init .

    $default  reduce using rule 14 (init_list)


State 36

   12 decl_stmt: TOK_CHR init_list .
   15 init_list: init_list . TOK_COMMA init

    TOK_COMMA  shift, and go to state 56

    $default  reduce using rule 12 (decl_stmt)


State 37

   13 decl_stmt: TOK_FLEX init_list .
   15 init_list: init_list . TOK_COMMA init

    TOK_COMMA  shift, and go to state 56

    $default  reduce using rule 13 (decl_stmt)


State 38

   18 assign_stmt: TOK_IDENT TOK_ASSIGN . expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 57
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 39

   19 assign_stmt: TOK_IDENT TOK_PLUS_ASSIGN . expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 58
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 40

   20 assign_stmt: TOK_IDENT TOK_MINUS_ASSIGN . expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 59
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 41

   21 assign_stmt: TOK_IDENT TOK_MULT_ASSIGN . expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 60
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 42

   22 assign_stmt: TOK_IDENT TOK_DIV_ASSIGN . expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 61
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 43

    5 stmt: decl_stmt TOK_TILDE .

    $default  reduce using rule 5 (stmt)


State 44

    6 stmt: assign_stmt TOK_TILDE .

    $default  reduce using rule 6 (stmt)


State 45

    7 stmt: shw_stmt TOK_TILDE .

    $default  reduce using rule 7 (stmt)


State 46

    8 stmt: expr_stmt TOK_TILDE .

    $default  reduce using rule 8 (stmt)


State 47

   31 additive_expression: additive_expression TOK_PLUS . multiplicative_expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    multiplicative_expression  go to state 62
    unary_expression           go to state 25
    primary_expression         go to state 26


State 48

   32 additive_expression: additive_expression TOK_MINUS . multiplicative_expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    multiplicative_expression  go to state 63
    unary_expression           go to state 25
    primary_expression         go to state 26


State 49

   34 multiplicative_expression: multiplicative_expression TOK_MULT . unary_expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    unary_expression    go to state 64
    primary_expression  go to state 26


State 50

   35 multiplicative_expression: multiplicative_expression TOK_DIV . unary_expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    unary_expression    go to state 65
    primary_expression  go to state 26


State 51

   43 primary_expression: TOK_LPAREN expression TOK_RPAREN .

    $default  reduce using rule 43 (primary_expression)


State 52

   23 shw_stmt: TOK_SHW TOK_LPAREN arg_list_opt . TOK_RPAREN

    TOK_RPAREN  shift, and go to state 66


State 53

   25 arg_list_opt: arg_list .
   27 arg_list: arg_list . TOK_COMMA expression

    TOK_COMMA  shift, and go to state 67

    $default  reduce using rule 25 (arg_list_opt)


State 54

   26 arg_list: expression .

    $default  reduce using rule 26 (arg_list)


State 55

   17 init: TOK_IDENT TOK_ASSIGN . expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 68
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 56

   15 init_list: init_list TOK_COMMA . init

    TOK_IDENT  shift, and go to state 33

    init  go to state 69


State 57

   18 assign_stmt: TOK_IDENT TOK_ASSIGN expression .

    $default  reduce using rule 18 (assign_stmt)


State 58

   19 assign_stmt: TOK_IDENT TOK_PLUS_ASSIGN expression .

    $default  reduce using rule 19 (assign_stmt)


State 59

   20 assign_stmt: TOK_IDENT TOK_MINUS_ASSIGN expression .

    $default  reduce using rule 20 (assign_stmt)


State 60

   21 assign_stmt: TOK_IDENT TOK_MULT_ASSIGN expression .

    $default  reduce using rule 21 (assign_stmt)


State 61

   22 assign_stmt: TOK_IDENT TOK_DIV_ASSIGN expression .

    $default  reduce using rule 22 (assign_stmt)


State 62

   31 additive_expression: additive_expression TOK_PLUS multiplicative_expression .
   34 multiplicative_expression: multiplicative_expression . TOK_MULT unary_expression
   35                          | multiplicative_expression . TOK_DIV unary_expression

    TOK_MULT  shift, and go to state 49
    TOK_DIV   shift, and go to state 50

    $default  reduce using rule 31 (additive_expression)


State 63

   32 additive_expression: additive_expression TOK_MINUS multiplicative_expression .
   34 multiplicative_expression: multiplicative_expression . TOK_MULT unary_expression
   35                          | multiplicative_expression . TOK_DIV unary_expression

    TOK_MULT  shift, and go to state 49
    TOK_DIV   shift, and go to state 50

    $default  reduce using rule 32 (additive_expression)


State 64

   34 multiplicative_expression: multiplicative_expression TOK_MULT unary_expression .

    $default  reduce using rule 34 (multiplicative_expression)


State 65

   35 multiplicative_expression: multiplicative_expression TOK_DIV unary_expression .

    $default  reduce using rule 35 (multiplicative_expression)


State 66

   23 shw_stmt: TOK_SHW TOK_LPAREN arg_list_opt TOK_RPAREN .

    $default  reduce using rule 23 (shw_stmt)


State 67

   27 arg_list: arg_list TOK_COMMA . expression

    TOK_LPAREN          shift, and go to state 6
    TOK_PLUS            shift, and go to state 7
    TOK_MINUS           shift, and go to state 8
    TOK_IDENT           shift, and go to state 28
    TOK_NUMBER_LITERAL  shift, and go to state 14
    TOK_CHAR_LITERAL    shift, and go to state 15
    TOK_STRING_LITERAL  shift, and go to state 16

    expression                 go to state 70
    additive_expression        go to state 23
    multiplicative_expression  go to state 24
    unary_expression           go to state 25
    primary_expression         go to state 26


State 68

   17 init: TOK_IDENT TOK_ASSIGN expression .

    $default  reduce using rule 17 (init)


State 69

   15 init_list: init_list TOK_COMMA init .

    $default  reduce using rule 15 (init_list)


State 70

   27 arg_list: arg_list TOK_COMMA expression .

    $default  reduce using rule 27 (arg_list)
